samples/_failures_safe/1761643402_71e0af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac40d7f0.c: In function ‘main’:
./samples/SAFE/__tmp_ac40d7f0.c:197:5: error: expected declaration or statement at end of input
  197 |     printf("Type\t\tValue\n");
      |     ^~~~~~
